:recycle: 배포된 서버 url로 수정

--- a/src/main/resources/static/ws-test.html
+++ b/src/main/resources/static/ws-test.html
@@ -25,7 +25,7 @@
   <legend>연결 설정</legend>
   <div class="row">
     <label>엔드포인트</label>
-    <input id="endpoint" value="http://localhost:8080/api/websocket/chat" />
+    <input id="endpoint" value="http://43.202.247.99:8080/api/websocket/chat" />
   </div>
   <div class="row">
     <label>JWT 토큰</label>
